<resources>
    <string name="app_name">Back Up</string>
    <string name="action_settings">Register</string>
    <string name="call_logs">Call Logs</string>
    <string name="photos">Photos</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="location">Location</string>
    <string name="apps">Apps</string>
    <string name="calendar">Calendar</string>
    <string name="sms">SMS</string>
    <string name="contacts">Contacts</string>

    <string name="title_activity_maps">Route</string>
    <string name="driving_mode">Driving Mode</string>
    <string name="walking_mode">Walking Mode</string>
    <string name="title_activity_login">Sign in</string>
    <string name="app_logo">App Logo</string>
    <string name="location_icon">Location Icon</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid (email format: id@company.extension)</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Email is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="select_a_service">SELECT A SERVICE</string>
    <string name="registration_details">REGISTRATION</string>
    <string name="submit_reg_button">SUBMIT</string>
    <string name="cancel_reg_button">QUIT</string>
    <string name="email_reg">Email:</string>
    <string name="phone_no_reg">Phone No.:</string>
    <string name="id_no_reg">ID No.:</string>
    <string name="account_no_reg">Account No.:</string>
    <string name="other_names_reg">Surname:</string>
    <string name="surname_reg">Name:</string>
    <string name="first_name_reg">Username:</string>
    <string name="surname">Name</string>
    <string name="other_name">Surname</string>
    <string name="id_number">ID NUMBER</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="first_name">Username</string>
    <string name="quit_login">QUIT</string>
    <string name="secret_pin">Secret Code:</string>
    <string name="confirm_pin">Confirm Word:</string>
    <string name="jane">Jane</string>
    <string name="doe">Doe</string>
    <string name="secret_code_hint">1234</string>
    <string name="signup_image_logo">TODO</string>
    <string name="error_name_required">Name required!</string>
    <string name="error_surname_required">Surname required!</string>
    <string name="error_secret_code_required">Secret code required!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur magna tortor, semper eu feugiat eu, vehicula vitae lacus.</string>
    <string name="recyclerview_fab_example">RecyclerView FAB example</string>
    <string name="floating_action_menu">Floating Action Menu</string>
    <string name="lorem_ipsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed ultricies risus. Integer nisi orci, lacinia sit amet mi in, mollis scelerisque purus. Nunc risus ligula, maximus eu orci a, facilisis dictum velit. Proin nec laoreet magna. Nulla ut sagittis lorem. Morbi id enim fermentum, semper diam et, tempus leo. Aliquam vel congue orci. Suspendisse potenti. Curabitur finibus diam augue, vel bibendum sapien ultrices non.</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation close</string>

    <string name="google_drive_key">AIzaSyD0Nk70YGWGOhumZo2j3-oLr5MBgPMQqGQ</string>


</resources>
