<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="false"
    android:background="@drawable/backup_bg"
    tools:context=".MainActivityFragment"
    tools:layout_editor_absoluteY="137dp"
    android:orientation="vertical"
    android:weightSum="10"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@android:color/transparent">

    </RelativeLayout>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:background="@color/cardview_shadow_end_color"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="3">

        <!-- Row 1 -->
        <!-- Column 1 -->

        <android.support.v7.widget.CardView
            android:id="@+id/row_1_col_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/smss"
                    android:src="@android:drawable/sym_action_chat" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sms"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Column 2 -->

        <android.support.v7.widget.CardView
            android:id="@+id/row_1_col_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/contact_ids"
                    android:src="@drawable/ic_contact" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Contacts"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row 2 -->
        <!-- Column 1 -->

        <android.support.v7.widget.CardView
            android:id="@+id/row_2_col_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/call_logs"
                    android:src="@android:drawable/sym_action_call" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Call Logs"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Column 2 -->

        <android.support.v7.widget.CardView
            android:id="@+id/row_2_col_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/photos"
                    android:src="@android:drawable/ic_menu_gallery" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Photos"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Row 3 -->
        <!-- Column 1 -->

        <android.support.v7.widget.CardView
            android:id="@+id/row_3_col_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/bookmarks"
                    android:src="@android:drawable/btn_star_big_on" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Bookmarks"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Column 2 -->

        <android.support.v7.widget.CardView
            android:id="@+id/row_3_col_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/location"
                    android:src="@drawable/marker" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </GridLayout>


    <!--<ImageView-->
        <!--android:id="@+id/sms"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_alignParentStart="false"-->
        <!--android:layout_alignParentTop="false"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:contentDescription="@string/smss"-->
        <!--android:fadingEdge="vertical"-->
        <!--android:onClick="getMessages"-->
        <!--android:src="@android:drawable/sym_action_chat" />-->

    <!--<ImageView-->
        <!--android:id="@+id/calls"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_alignTop="@+id/sms"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:contentDescription="@string/calls"-->
        <!--android:onClick="getCallLogs"-->
        <!--android:src="@android:drawable/ic_menu_call" />-->

    <!--<ImageView-->
        <!--android:id="@+id/contacts"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignTop="@+id/sms"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:src="@android:drawable/ic_menu_my_calendar"-->
        <!--android:contentDescription="@string/contact_ids" />-->

    <!--<ImageView-->
        <!--android:id="@+id/photos"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_alignParentBottom="false"-->
        <!--android:layout_alignParentEnd="false"-->
        <!--android:layout_below="@+id/calls"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="15dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:src="@android:drawable/ic_menu_gallery"-->
        <!--android:contentDescription="@string/photos" />-->

    <!--<ImageView-->
        <!--android:id="@+id/bookmarks"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_alignParentBottom="false"-->
        <!--android:layout_below="@+id/sms"-->
        <!--android:layout_centerHorizontal="false"-->
        <!--android:layout_marginBottom="15dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:src="@android:drawable/ic_menu_save"-->
        <!--android:contentDescription="@string/bookmarks" />-->

    <!--<ImageView-->
        <!--android:id="@+id/location"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_alignParentBottom="false"-->
        <!--android:layout_alignParentEnd="false"-->
        <!--android:layout_below="@+id/contacts"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_toEndOf="@+id/photos"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:src="@android:drawable/ic_menu_mylocation"-->
        <!--android:contentDescription="@string/location" />-->

    <!--<ImageView-->
        <!--android:id="@+id/apps"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_alignParentBottom="false"-->
        <!--android:layout_below="@+id/photos"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:src="@android:drawable/ic_menu_send"-->
        <!--android:contentDescription="@string/apps" />-->

    <!--<ImageView-->
        <!--android:id="@+id/calendar"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_alignParentBottom="false"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_below="@+id/bookmarks"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:src="@android:drawable/ic_menu_month"-->
        <!--android:contentDescription="@string/calendar" />-->

</LinearLayout>